# tiet-notegen

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
classifier/: classify.py
ocr/: question2text.py
src/classifier/: classify.py
src/json2md/: converter.py
src/models/: Classification.py
src/scraper/: scrape.py
